--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import 'utils';
 @import 'fonts';
-@import 'typography';
 
-body {
-  background: $c-gray;
-}
+@import './blocks/page';
+@import './blocks/top-bar';
+@import './blocks/header';
+@import './blocks/icon';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/section-title';
+@import './blocks/container';
+@import './blocks/product';
+@import './blocks/about';
+@import './blocks/footer';
