--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-$c-gray: #eee;
+$gray: #7f8096;
+$accent-orange: #f9512e;
+$white: #ffff;
+$black: #1c1a26;
+$light-pink: #ffeefc;
+$tablet-min-width: 576px;
+$desktop-min-width: 1024px;
+$bigDesktop-min-width: 1200px;
+$effectDuration: 0.3s;
