--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -80,6 +80,7 @@
     color: #fff;
 
     &-item {
+      width: fit-content;
       list-style: none;
       transition: transform $effectDuriation;
 
@@ -112,7 +113,7 @@
     text-decoration: none;
 
     &:hover {
-      color: #fba28f;
+      color: #f9512f;
     }
   }
 
@@ -126,6 +127,16 @@
 
     @include on-desktop {
       margin-top: 48px;
+    }
+
+    &-link {
+      color: #f9512e;
+      transition: all $effectDuriation;
+
+      &:hover {
+        transform: scale(1.2);
+        color: #fff;
+      }
     }
   }
 
