--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,16 +6,18 @@
 .page {
   scroll-behavior: smooth;
 
-  font-family: Inter, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 150%;
-  letter-spacing: -0.01em;
+  &__body {
+    font-family: Inter, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 150%;
+    letter-spacing: -0.01em;
 
-  background: $page-main-bg-color;
+    background: $page-main-bg-color;
 
-  &:has(.page__menu:target) {
-    overflow: hidden; /* not to scroll the page */
+    &:has(.page__menu:target) {
+      overflow: hidden; /* not to scroll the page */
+    }
   }
 
   &__menu {
