--- a/src/styles/blocks/topbar.scss
+++ b/src/styles/blocks/topbar.scss
@@ -3,18 +3,19 @@
   justify-content: space-between;
   align-items: center;
   padding: 28px 32px;
+  position: relative;
 
   &__menu {
-    display: flex;
-    gap: 64px;
-  }
+    display: none;
 
-  &__logo-link {
-    display: flex;
-  }
+    @include on-tablet {
+      display: none;
+    }
 
-  &__logo {
-    height: 32px;
+    @include on-desktop {
+      display: flex;
+      gap: 64px;
+    }
   }
 }
 
