--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,4 +3,6 @@ $back-color: #FFEEFC;
 $accent-color: #F9512E;
 $text-color: #1C1A26;
 $product-title-color: #7F8096;
-$menu-item-color: #FFFFFF;
+$menu-item-color: #FFF;
+$focused-cookie-color: #B2341A;
+$disabled-cookie-color: #FBA28F;
