--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -1,30 +1,63 @@
 .about {
-  @include page-grid;
-
   display: flex;
   flex-direction: column;
-  gap: 144px;
+  gap: 64px;
   background-image: url(../images/crumbs.png);
   background-repeat: no-repeat;
   background-size: 718px 673px;
   background-position: center;
   padding-bottom: 56px;
 
+  @include on-tablet {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+  }
+
+  @include on-desktop {
+    display: flex;
+    flex-direction: column;
+    gap: 144px;
+  }
+
   &__top {
-    // display: flex;
-    // flex-direction: row;
-    // gap: 24px;
-    // align-items: center;
-    @include page-grid;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+
+    @include on-tablet {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 24px;
+    }
+
+    @include on-desktop {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 24px;
+    }
 
     &--title {
       grid-column: 1 / span 3;
       color: $accent-color;
-      font-size: 72px;
+      font-size: 48px;
       font-weight: 400;
       text-transform: uppercase;
-      // width: 584px;
+      width: 288px;
+      line-height: 85%;
+      letter-spacing: -5%;
+
+      @include on-tablet {
+        font-size: 56px;
+        width: 328px;
+      }
+
+      @include on-desktop {
+        font-size: 72px;
+        width: 584px;
+      }
     }
 
     &--text {
@@ -32,17 +65,68 @@
       color: $text-color;
       font-size: 16px;
       font-weight: 400;
-      // width: 584px;
       align-items: center;
+      width: 288px;
+
+      @include on-tablet {
+        width: 328px;
+      }
+
+      @include on-desktop {
+        width: 584px;
+      }
     }
   }
 
   &__bottom {
-    @include page-grid;
-    align-items: center;
-    // display: flex;
-    // flex-direction: row;
-    // gap: 24px;
+    gap: 48px;
+    display: flex;
+    flex-direction: column;
+
+    @include on-tablet {
+      display: flex;
+      flex-direction: column;
+    }
+
+    @include on-desktop {
+      display: flex;
+      flex-direction: row;
+      gap: 24px;
+    }
+  }
+}
+
+.bottom {
+  display: flex;
+
+  &__first {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+
+    @include on-tablet {
+      display: flex;
+      flex-direction: row;
+      gap: 24px;
+    }
+
+    @include on-desktop {
+      display: flex;
+      flex-direction: row;
+      gap: 24px;
+    }
+  }
+
+  &__second {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+
+    @include on-tablet {
+      display: flex;
+      flex-direction: row;
+      gap: 24px;
+    }
   }
 }
 
@@ -50,23 +134,18 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  // width: 280px;
-  padding-bottom: 293px;
+  width: 288px;
 
-  &:nth-child(1) {
-    grid-column: 1 / span 2;
+  @include on-tablet {
+    display: flex;
+    flex-direction: column;
+    width: 328px;
   }
 
-  &:nth-child(2) {
-    grid-column: 3 / span 2;
-  }
-
-  &:nth-child(3) {
-    grid-column: 5 / span 2;
-  }
-
-  &:nth-child(4) {
-    grid-column: 7 / span 2;
+  @include on-desktop {
+    display: flex;
+    flex-direction: column;
+    width: 280px;
   }
 
   &__number {
