--- a/src/styles/blocks/contact.scss
+++ b/src/styles/blocks/contact.scss
@@ -1,21 +1,47 @@
 .contact {
-  grid-column: 4 / span 4;
   display: flex;
   flex-direction: column;
-  padding-top: 88px;
-  padding-bottom: 88px;
+  width: 288px;
+
+  @include on-tablet {
+    width: 328px;
+  }
+
+  @include on-desktop {
+    width: 584px;
+  }
 
   &__title {
-    font-size: 72px;
+    font-size: 48px;
     color: $menu-item-color;
     text-transform: uppercase;
     padding-bottom: 40px;
+
+    @include on-tablet {
+      font-size: 56px;
+    }
+
+    @include on-desktop {
+      font-size: 72px;
+    }
   }
 
   &__container {
     display: flex;
-    flex-direction: row;
-    gap: 24px;
+    flex-direction: column;
+    gap: 40px;
+
+    @include on-tablet {
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+    }
+
+    @include on-desktop {
+      display: flex;
+      flex-direction: row;
+      gap: 24px;
+    }
   }
 
   &__call {
@@ -64,12 +90,4 @@
       font-weight: 400;
     }
   }
-}
-
-.content {
-  grid-column: 4 / span 1;
-  color: $product-title-color;
-  font-size: 16px;
-  font-weight: 400;
-  padding-top: 88px;
 }
