--- a/src/styles/blocks/products.scss
+++ b/src/styles/blocks/products.scss
@@ -1,65 +1,117 @@
 .products {
-  padding-bottom: 184px;
+  padding-bottom: 72px;
+  padding-top: 64px;
+
+  @include on-tablet {
+    padding-top: 0;
+  }
 
   &__title {
     color: $accent-color;
-    font-size: 72px;
+    font-size: 48px;
     font-weight: 400;
     text-transform: uppercase;
     padding-bottom: 24px;
+
+    @include on-tablet {
+      font-size: 56px;
+    }
+
+    @include on-desktop {
+      font-size: 72px;
+    }
   }
 
   &__text {
     color: $text-color;
     font-size: 16px;
     font-weight: 400;
-    padding-bottom: 80px;
+    padding-bottom: 56px;
+
+    @include on-tablet {
+      padding-bottom: 80px;
+    }
+
+    @include on-desktop {
+      padding-bottom: 80px;
+    }
   }
 
   &__list {
     @include page-grid;
 
-    row-gap: 80px;
+    row-gap: 56px;
+
+    @include on-desktop {
+      row-gap: 80px;
+    }
+  }
+
+  &__card {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
   }
 
   &__row {
     display: contents;
 
-    &--left {
-      .products__card:nth-child(1) {
-        grid-column: 1 / span 3;
-      }
+    .products__card {
+      grid-column: 1 / span 2;
+    }
 
-      .products__card:nth-child(2) {
-        grid-column: 4 / span 3;
+    @include on-tablet {
+      &--left,
+      &--right {
+        .products__card:nth-child(1) {
+          grid-column: 1 / span 4;
+        }
+
+        .products__card:nth-child(2) {
+          grid-column: 5 / span 4;
+        }
       }
     }
 
-    &--right {
-      .products__card:nth-child(1) {
-        grid-column: 3 / span 3;
+    @include on-desktop {
+      &--left {
+        .products__card:nth-child(1) {
+          grid-column: 1 / span 3;
+        }
+
+        .products__card:nth-child(2) {
+          grid-column: 4 / span 3;
+        }
       }
 
-      .products__card:nth-child(2) {
-        grid-column: 6 / span 3;
+      &--right {
+        .products__card:nth-child(1) {
+          grid-column: 3 / span 3;
+        }
+
+        .products__card:nth-child(2) {
+          grid-column: 6 / span 3;
+        }
       }
     }
-  }
-
-  &__card {
-    width: 432px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
   }
 }
 
 .card {
   &__top {
     width: 100%;
-    height: 560px;
+    height: 356px;
     border-radius: 8px;
     padding-bottom: 16px;
+
+    @include on-tablet {
+      height: 424px;
+    }
+
+    @include on-desktop {
+      height: 560px;
+    }
 
     img {
       width: 100%;
