--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,20 +1,21 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-@import './blocks/header.scss';
-@import './blocks/topbar.scss';
-@import './blocks/products.scss';
-@import './blocks/about.scss';
-@import './blocks/nav.scss';
-@import './blocks/contact.scss';
 @import './utils/mixins';
+@import './blocks/header';
+@import './blocks/topbar';
+@import './blocks/products';
+@import './blocks/about';
+@import './blocks/nav';
+@import './blocks/contact';
+@import './blocks/social';
 
 body {
   background: $back-color;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
-h1, h2, p, ul {
+h1, h2, p, ul, body {
   padding: 0;
   margin: 0;
 }
