--- a/src/styles/blocks/topbar.scss
+++ b/src/styles/blocks/topbar.scss
@@ -26,6 +26,10 @@
   font-weight: 400;
   cursor: pointer;
 
+  &:hover {
+    color: $accent-color;
+  }
+
   &--contact {
     display: flex;
     align-items: center;
