--- a/src/styles/blocks/contact.scss
+++ b/src/styles/blocks/contact.scss
@@ -68,6 +68,10 @@
       font-size: 16px;
       font-weight: 400;
       list-style: none;
+
+      &:hover {
+        color: $accent-color;
+      }
     }
   }
 
@@ -88,6 +92,10 @@
       color: $menu-item-color;
       font-size: 16px;
       font-weight: 400;
+
+      &:hover {
+        color: $accent-color;
+      }
     }
   }
 }
