--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -103,6 +103,10 @@
       font-size: 16px;
       font-weight: 400;
       list-style: none;
+
+      &:hover {
+        color: $accent-color;
+      }
     }
   }
 }
